--- a/client/src/assets/html/dashboard.html
+++ b/client/src/assets/html/dashboard.html
@@ -1,10 +1,8 @@
 <div id="dashboard">
     <h1>PLAYER'S turn</h1>
-    <ul class="turnWrapper" id="dashboardPlayerTurn">
+    <ul class="turnWrapper">
         <li><button id="harvestFieldButton" type="button">harvest or discard field</button></li>
-        <li><button id="endTurnButton" type="button">end my turn</button></li>
-    </ul>
-    <ul class="turnWrapper" id="dashboardOtherTurn">
-        <li><button id="harvestFieldButton" type="button">harvest or discard field</button></li>
+        <li><button id="leftFieldButton" type="button" style="display:none;">harvest or discard left field</button></li>
+        <li><button id="rightFieldButton" type="button" style="display:none;">harvest or discard right field</button></li>
     </ul>
 </div>
