Added icon and title

--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="/src/assets/images/icon.jpg">
+    <title>Bean Game™</title>
     <style>
       @font-face {
         font-family: 'Bodoni Highlight';
