--- a/client/src/assets/html/harvest-popup.html
+++ b/client/src/assets/html/harvest-popup.html
@@ -1,6 +1,6 @@
 <div id="harvestPopup">
-    <p id="harvestText">Harvest NUM_BEANS BEAN_TYPE beans in field for NUM_COINS coins?</p>
-    <p id="discardText">Discard NUM_BEANS BEAN_TYPE beans in field?</p>
+    <p id="harvestText">Harvest NUM_BEANS BEAN_TYPE for NUM_COINS coins?</p>
+    <p id="discardText">Discard NUM_BEANS BEAN_TYPE?</p>
     <button id="yesButton" class="harvestButton" type="button">Yes</button>
     <button id="noButton" class="harvestButton" type="button">No</button>
 </div>
