--- a/client/src/assets/html/dashboard.html
+++ b/client/src/assets/html/dashboard.html
@@ -5,4 +5,7 @@
         <li><button id="leftFieldButton" type="button" style="display:none;">harvest or discard left field</button></li>
         <li><button id="rightFieldButton" type="button" style="display:none;">harvest or discard right field</button></li>
     </ul>
+    <ul class="endGameWrapper">
+        <li><button id="endGameButton" type="button">end game</button></li>
+    </ul>
 </div>
