--- a/client/src/assets/html/harvest-popup.html
+++ b/client/src/assets/html/harvest-popup.html
@@ -1,4 +1,4 @@
-<div id="harvestPopup">
+<div id="harvestPopupContainer">
     <p id="harvestText">Harvest NUM_BEANS BEAN_TYPE for NUM_COINS coins?</p>
     <p id="discardText">Discard NUM_BEANS BEAN_TYPE?</p>
     <button id="yesButton" class="harvestButton" type="button">Yes</button>
