--- a/client/src/assets/html/name-form.html
+++ b/client/src/assets/html/name-form.html
@@ -1,4 +1,4 @@
-<div id="inputDiv">
+<div id="inputContainer">
 	<h1>Please enter your name:</h1>
 	<div class="wrapper">
 		<input type="text" id="nameField" name="nameField" />
