more ending game functionality - end turn and destroy hand

--- a/client/index.html
+++ b/client/index.html
@@ -104,7 +104,7 @@
 
       /* END GAME */
       #endGameButton {
-        display: none !important;
+        /* display: none !important; */
       }
       </style>
     <meta charset="utf-8">
