--- a/client/src/assets/html/dashboard.html
+++ b/client/src/assets/html/dashboard.html
@@ -2,8 +2,8 @@
     <h1>PLAYER'S turn</h1>
     <ul class="turnWrapper">
         <li><button id="harvestFieldButton" type="button">harvest or discard field</button></li>
-        <li><button id="leftFieldButton" type="button" style="display:none;">harvest or discard left field</button></li>
-        <li><button id="rightFieldButton" type="button" style="display:none;">harvest or discard right field</button></li>
+        <li><button id="leftFieldButton" type="button" style="display:none;">left field</button></li>
+        <li><button id="rightFieldButton" type="button" style="display:none;">right field</button></li>
     </ul>
     <ul class="endGameWrapper">
         <li><button id="endGameButton" type="button">end game</button></li>
